# ai574

./: .editorconfig  .gitignore  .pylintrc  Model 2- Langchain-RAG.ipynb  README.md  example.ipynb  pyproject.toml  requirements.txt
fy_bot/: __main__.py  context_generation.py  controller.py  dataset.py  datasource.py  exception.py  gpt2_model.py  logger.py  model.py  project.py  server.py
fy_bot/cli/: datasource.py  main.py  project.py
fy_bot/resources/: greetings.yml
fy_bot_ui/: index.html  package-lock.json  package.json  vite.config.ts
fy_bot_ui/src/: App.tsx  Chat.tsx  ChatMessage.tsx
